# formula.rs

./: Cargo.toml  LICENSE  readme.md
src/: _formula.rs  context.rs  formula.rs  function.rs  lib.rs
src/calculate/: calculator.rs  iterator.rs  mod.rs  reference.rs  utils.rs
src/calculate/functions/: date.rs  logical.rs  math.rs  mod.rs  statistical.rs  text.rs
src/calculate/operators/: boolean.rs  comparison.rs  date.rs  mod.rs  numeric.rs  string.rs  values.rs
src/error/: mod.rs
src/parser/: function.rs  mod.rs  operators.rs  parser.rs  utils.rs
src/parser/builder/: basic_builders.rs  function_builders.rs  mod.rs  operator_builders.rs  pratt_parser.rs  reference_builder.rs
src/parser/grammar/: grammar.pest  mod.rs
src/value/: mod.rs  value_type.rs
tests/: tests_calculate.rs
